last commit: add scrollbars, fix details

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -115,7 +115,9 @@ input::placeholder{
 .right{
     background-image: url('../img/mine.jpg');
     margin-bottom:1rem;
-    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 .right .controls{
     background-color: var(--clr-secondary-light);
@@ -129,8 +131,7 @@ input::placeholder{
 }
 .right .message_text{
     background-color: #F3EEEA;
-    position: absolute;
-    bottom:0;
+    justify-self: flex-end;
 }
 .right .message_text i{
     font-size:1.7rem;
@@ -146,7 +147,10 @@ input::placeholder{
     padding-left:0.5rem;
     color: #6B7376;
 }
-
+.conversation{
+    height:100%;
+    overflow-y: scroll;
+}
 .conversation .received_message li{
     width: 100%;
     height:50px;
